; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_net_help.c_addr_to_str.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_net_help.c_addr_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_storage = type { i32 }
%struct.sockaddr_in = type { i32, i64 }
%struct.sockaddr_in6 = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"(inet_ntop_error)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @addr_to_str(%struct.sockaddr_storage* %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.sockaddr_storage*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store %struct.sockaddr_storage* %0, %struct.sockaddr_storage** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %11 = load %struct.sockaddr_storage*, %struct.sockaddr_storage** %5, align 8
  %12 = bitcast %struct.sockaddr_storage* %11 to %struct.sockaddr_in*
  %13 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %9, align 4
  %16 = load %struct.sockaddr_storage*, %struct.sockaddr_storage** %5, align 8
  %17 = bitcast %struct.sockaddr_storage* %16 to %struct.sockaddr_in*
  %18 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %17, i32 0, i32 0
  %19 = bitcast i32* %18 to i8*
  store i8* %19, i8** %10, align 8
  %20 = load %struct.sockaddr_storage*, %struct.sockaddr_storage** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i64 @addr_is_ip6(%struct.sockaddr_storage* %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %4
  %25 = load %struct.sockaddr_storage*, %struct.sockaddr_storage** %5, align 8
  %26 = bitcast %struct.sockaddr_storage* %25 to %struct.sockaddr_in6*
  %27 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %26, i32 0, i32 0
  %28 = bitcast i32* %27 to i8*
  store i8* %28, i8** %10, align 8
  br label %29

29:                                               ; preds = %24, %4
  %30 = load i32, i32* %9, align 4
  %31 = load i8*, i8** %10, align 8
  %32 = load i8*, i8** %7, align 8
  %33 = load i64, i64* %8, align 8
  %34 = trunc i64 %33 to i32
  %35 = call i64 @inet_ntop(i32 %30, i8* %31, i8* %32, i32 %34)
  %36 = icmp eq i64 %35, 0
  br i1 %36, label %37, label %41

37:                                               ; preds = %29
  %38 = load i8*, i8** %7, align 8
  %39 = load i64, i64* %8, align 8
  %40 = call i32 @snprintf(i8* %38, i64 %39, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  br label %41

41:                                               ; preds = %37, %29
  ret void
}

declare dso_local i64 @addr_is_ip6(%struct.sockaddr_storage*, i32) #1

declare dso_local i64 @inet_ntop(i32, i8*, i8*, i32) #1

declare dso_local i32 @snprintf(i8*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
